refactor: 베스트 MR에 n회 이상 선정 시 획득 로직 최적화